<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movie">

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.nazimovaleksandr.films.single_activity.ui.films.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_nav_movie_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.nazimovaleksandr.films.single_activity.ui.favorites.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_nav_favorites_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.nazimovaleksandr.films.single_activity.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" />

</navigation>