<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Films.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/full_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_load" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/full_image_mini"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_load" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_gravity="bottom"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.035"
                android:alpha="0.5"
                android:background="@color/black" />

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.Films.PopupOverlay"
                app:title="@string/details" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".single_activity.ui.details.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            tools:context=".details.DetailsActivity">

            <TextView
                android:id="@+id/full_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/like"
                app:layout_constraintStart_toStartOf="@id/full_text"
                app:layout_constraintTop_toBottomOf="@id/full_text" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/like"
                app:layout_constraintStart_toEndOf="@id/like"
                app:layout_constraintTop_toTopOf="@id/like" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:background="@color/black"
                android:elevation="5dp"
                android:gravity="top"
                android:hint="@string/comment"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="200dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/button_message"
                app:layout_constraintEnd_toEndOf="@id/full_text"
                app:layout_constraintStart_toStartOf="@id/full_text"
                app:layout_constraintTop_toBottomOf="@id/checkbox" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/invite_friend"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/button_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_sms"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/sms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_message"
                app:layout_constraintStart_toEndOf="@id/button_email" />

            <Button
                android:id="@+id/button_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_sms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
